# ModelConverter

./: .gitignore  .gitmodules  CMakeLists.txt
src/: ArgParser.cpp  ArgParser.h  GLTFModel.cpp  GLTFModel.h  Model.h  Source.cpp  main.cpp
